--- a/app/views/breeds/index.html.erb
+++ b/app/views/breeds/index.html.erb
@@ -3,7 +3,7 @@
 
 <div class="container breeds-index">
   <div class="row">
-    <h1>Breeds</h1>
+    <h1><%= t('header.breeds') %></h1>
   </div>
 
   <div class="row">
