--- a/app/views/shared/_social_media_share_buttons.html.erb
+++ b/app/views/shared/_social_media_share_buttons.html.erb
@@ -1,10 +1,10 @@
 <div class="row">
   <button id="facebookShareBtn" class="facebook btn-social-share waves-effect btn-large">
     <i class="fab fa-facebook-f"></i>
-    Share on facebook
+    <%= t('social.share_on', kind: "facebook") %>
   </button>
   <%= link_to @tweet_url, class:"twitter btn-social-share waves-effect btn-large" do %>
     <i class="fab fa-twitter"></i>
-    Share on twitter
+    <%= t('social.share_on', kind: "twitter") %>
   <% end %>
 </div>
