--- a/app/javascript/stylesheets/modules/home.scss
+++ b/app/javascript/stylesheets/modules/home.scss
@@ -55,7 +55,7 @@
     border-bottom: 2px solid $primaryColor !important;
 
     span {
-      color: black;
+      color: $black;
     }
   }
 }
@@ -147,7 +147,7 @@
 
 .breeds-landing, .breeds-index {
   .card {
-    color: black;
+    color: $black;
     overflow: hidden;
   
     .card-image, .card-content {
@@ -181,8 +181,8 @@
       font-weight: bold;
   
       .material-icons {
-        position: absolute; 
         transform: scale(2);
+        position: absolute; 
       }
   
       @include small-and-up {
@@ -214,10 +214,10 @@
       }
   
       .material-icons {
+        transform: scale(1.2);
         position: absolute;
         top: 27px;
         right: 15px;
-        transform: scale(1.2);
         padding: 3px;
   
         @include small-and-down {
@@ -248,34 +248,34 @@
     &:hover {
       cursor: pointer;
       transform: scale(1.05);
-      box-shadow: 0 8px 17px 2px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
+      box-shadow: $z-depth-3;
     }
   }
 
   .card-image {
     max-height: $imgHeight;
      img {
-      object-fit: cover;
       height: $imgHeight;
+      object-fit: cover;
      }
   }
 
   .card-title {
     display: block;
+    background-color: $secondaryColor;
+    opacity: 0.8;
     text-align: center;
     font-size: 1.5em;
     font-weight: bold;
     padding: 0px 8px !important;
     border-top-right-radius: 5px;
-    opacity: 0.8;
     border-bottom-right-radius: 5px;
     letter-spacing: 0.06em;
     margin-bottom: 15px !important;
-    background-color: $secondaryColor;
   }
 
   .card-content {
-    color: black;
+    color: $black;
     padding: 10px 15px 20px 15px;
     border-top: 5px solid $secondaryColor;
 
