--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -7,7 +7,7 @@
     <div class="row">
       <div class="col s12 m6">
         <div class="input-field">
-          <%= f.select(:pair_id, options_for_select(@parents_array, selected: f.object ? f.object.pair_id : ""), {selected: "", disabled: "", prompt: 'Parents *'}) %>
+          <%= f.select(:pair_id, options_for_select(@parents_array, selected: f.object ? f.object.pair_id : ""), {selected: "", disabled: "", prompt: "#{t('cat_info.parents')} *"}) %>
         </div>
         <%= render 'shared/error_messages', object: @cat, field: :pair_id %>
       </div>
@@ -19,7 +19,7 @@
     <div class="col s12 m6">
       <div class="input-field">
         <%= f.label :name do %>
-        Name <% if @form == "parent"%>*<% end %>
+        <%= t('cat_info.name') %> <% if @form == "parent"%>*<% end %>
         <% end %>
         <%= f.text_field :name, autofocus: true %>
       </div>
@@ -33,7 +33,7 @@
     <div class="col s12 m6">
   <% end %>
       <div class="input-field">
-        <%= f.select(:breed_id, options_for_select(@breeds_array, selected: f.object ? f.object.breed_id : ""), {selected: "", disabled: "", prompt: 'Breed *'}) %>
+        <%= f.select(:breed_id, options_for_select(@breeds_array, selected: f.object ? f.object.breed_id : ""), {selected: "", disabled: "", prompt: "#{t('breed', count:1)} *"}) %>
       </div>
       <%= render 'shared/error_messages', object: @cat, field: :breed_id %>
     </div>
@@ -44,7 +44,7 @@
 
     <div class="col s12 m6 l4">
       <div class="input-field">
-        <%= f.select(:gender, [['Gender *', "", { 'disabled' => 'disabled', 'selected' => 'selected', 'class' => 'inactive'}], ['Male', 1], ['Female', 2]]) %>
+        <%= f.select(:gender, [["#{t('cat_info.gender')} *", "", { 'disabled' => 'disabled', 'selected' => 'selected', 'class' => 'inactive'}], ["#{t('male', count:1).capitalize}", 1], ["#{t('female', count:1).capitalize}", 2]]) %>
       </div>
       <%= render 'shared/error_messages', object: @cat, field: :gender %>
     </div>
@@ -52,7 +52,7 @@
     <div class="col s12 m6 l4">
       <div class="input-field">
         <%= f.label :color do %>
-          Color *
+          <%= t('cat_info.color') %> *
         <% end %>
         <%= f.text_field :color %>
       </div>
@@ -76,7 +76,7 @@
     <div class="row">
       <div class="col s8 l4">
         <%= link_to cats_new_litter_path, remote: true, class:"btn waves-effect waves-light inner-form-btn", id:"getNewLitterNumber" do %>
-        New litter
+        <%= t('buttons.new_litter') %>
         <i class="material-icons right">add</i>
         <% end %>
       </div>
@@ -86,14 +86,14 @@
       <div class="col s12 m7">
         <div class="input-field">
           <%= f.hidden_field :litter_number, id:"hidden_cat_litter_number" %>
-          <%= f.select(:litter_number, options_for_select(@litter_numbers, selected: f.object ? f.object.litter_number : ""), {selected: "", disabled: "", prompt: 'Litter number *'}) %>
+          <%= f.select(:litter_number, options_for_select(@litter_numbers, selected: f.object ? f.object.litter_number : ""), {selected: "", disabled: "", prompt: "#{t('cat_info.litter_nr')} *"}) %>
         </div>
         <%= render 'shared/error_messages', object: @cat, field: :litter_number %>
       </div>
       <div class="col s12 m5">
         <div class="input-field">
         <%= f.label :birth_date do %>
-            Birthdate *
+          <%= t('cat_info.birth_date') %> *
           <% end %>
           <%= f.text_field :birth_date, class:"datepicker" %>
         </div>
@@ -106,7 +106,7 @@
         <div class="input-field">
           <label class="checkbox-label">
             <%= f.check_box :is_vaccinated %>
-            <span>Vaccinated</span>  
+            <span><%= t('cat_info.vaccinated') %></span>  
           </label>
         </div>
       </div>
@@ -115,7 +115,7 @@
         <div class="input-field">
           <label class="checkbox-label">
             <%= f.check_box :is_castrated %>
-            <span>Castrated</span>  
+            <span><%= t('cat_info.castrated') %></span>  
           </label>
         </div>
       </div>
@@ -128,7 +128,7 @@
             <label class="checkbox-label">
               <%= f.check_box :is_available %>
               <span class="lever lever-no-margin"></span>
-              Available
+              <%= t('cat_info.available') %>
             </label>
           </div>
         </div>
@@ -141,7 +141,7 @@
       <div class="file-field input-field">
         <div class="btn">
           <i class="material-icons-outlined">add_photo_alternate</i>
-          <span>Card picture</span>
+          <span><%= t('words.image') %></span>
           <%= f.file_field :card_picture %>
         </div>
         <div class="file-path-wrapper">
@@ -155,7 +155,7 @@
     <div class="col s12">
       <div class="card-picture-preview">
         <% if @cat.new_record? %>
-          <span>Preview *</span>
+          <span><%= t('words.preview') %> *</span>
         <% else %>
           <%= image_tag(@cat.card_picture) if @cat.card_picture.attached? %> 
         <% end %>
@@ -170,7 +170,7 @@
       <div class="file-field input-field">
         <div class="btn">
           <i class="material-icons-outlined">add_photo_alternate</i>
-          <span>Other pictures</span>
+          <span><%= t('buttons.other_pictures') %></span>
           <%= f.file_field :pictures, multiple: true %>
         </div>
         <div class="file-path-wrapper">
@@ -184,7 +184,7 @@
     <div class="col s12">
       <div class="pictures-preview">
         <% if @cat.new_record? or @cat.pictures.count == 0 %>
-          <span>Preview</span>
+          <span><%= t('words.preview') %></span>
         <% else %>
           <% (0...@cat.pictures.count).each do |picture| %>
             <div class="image-placeholder">
@@ -202,9 +202,9 @@
       <div class="col">
         <%= f.button class:"btn-large waves-effect waves-light", type:"submit", name:"form", value: @form do %>
           <% if @cat.new_record? %>
-            Create
+            <%= t('buttons.create') %>
           <% else %>
-            Update
+            <%= t('buttons.update') %>
           <% end %>
           <i class="material-icons right">done</i>
         <% end %>
@@ -215,42 +215,42 @@
 
 <div class="row">
   <div class="col">
-    <%= link_to 'javascript:history.back()', class:"waves-effect waves-light btn left" do %>
+    <%= link_to 'javascript:history.back()', class:"waves-effect waves-light btn left btn-back" do %>
       <i class="material-icons left">keyboard_arrow_left</i>
-      Back
+      <%= t('buttons.back') %>
     <% end %>
   </div>
   <% if !@cat.new_record? %>
       <% if parent_litters_count(@cat, @user) == 0 and parent_kittens_count(@cat, @user) == 0 and @cat.pairs.size == 0 %>
         <div class="col right">
           <a class="btn waves-effect waves-light btn-delete modal-trigger" href="#modal-delete">
-            <span>Delete</span>
+            <span><%= t('buttons.delete') %></span>
             <i class="material-icons right">delete</i>
           </a>
         </div>
         <div id="modal-delete" class="modal modal-confirmation">
           <div class="modal-content">
-            <h4>Delete <%= @form %></h4>
-            <p>Are you sure?</p>
-            <p>This action is permanent!</p>
+            <h4><%= t('buttons.delete') %>&nbsp;<%= (I18n.t "#{@form}", count:1).downcase %></h4>
+            <p><%= t('modal.are_you_sure') %>?</p>
+            <p><%= t('modal.this_action_is_permanent') %>!</p>
           </div>
           <div class="modal-footer">
             <a class="btn waves-effect waves-light modal-close btn-cancel">
-             Cancel
+             <%= t('words.cancel') %>
             </a>
             <%= link_to cat_path(@cat, form: @form), class:"btn waves-effect waves-light btn-confirm", method: :delete do %>
-              I'm sure
+              <%= t('words.im_sure') %>
             <% end %>
           </div>
         </div>
       <% else %>
         <div class="col right">
-          <a class="btn disabled-tooltip-wrapper tooltipped" data-position="top" data-tooltip="You can't delete a parent with partners and/or kittens">
+          <%= link_to "javascript:void(0)", class:"btn disabled-tooltip-wrapper tooltipped", data: { position:"top", tooltip: t('cattery_overview.tooltip.delete_parent_condition') } do %>
             <button class="btn waves-effect waves-light btn-delete disabled tooltipped">
-              <span>Delete</span>
+              <span><%= t('buttons.delete') %></span>
               <i class="material-icons right">delete</i>
             </button>
-          </a>
+          <% end %>
         </div>
       <% end %>
     </div>
