--- a/app/views/cats/_page_items.html.erb
+++ b/app/views/cats/_page_items.html.erb
@@ -14,27 +14,27 @@
               <div class="info-block">
                 <div class="row">
                   <div class="col s4">
-                    <span class="info-title">Breed:</span>
+                    <span class="info-title"><%= t('breed', count: 1) %>:</span>
                   </div>
                   <div class="col s8">
-                    <span class="info-text"><%= cat_breed(cat) %></span>
+                    <span class="info-text"><%= t("breeds.#{cat_breed(cat).breed_code}.name") %></span>
                   </div>
                 </div>
               </div>
               <div class="info-block">
                 <div class="row">
                   <div class="col s4">
-                    <span class="info-title">Gender:</span>
+                    <span class="info-title"><%= t('cat_info.gender') %>:</span>
                   </div>
                   <div class="col s8">
-                    <span class="info-text"><%= cat_gender(cat) %></span>
+                    <span class="info-text"><%= cat_gender(cat).capitalize %></span>
                   </div>
                 </div>
               </div>
               <div class="info-block">
                 <div class="row">
                   <div class="col s4">
-                    <span class="info-title">Cattery:</span>
+                    <span class="info-title"><%= t('cat_info.cattery') %>:</span>
                   </div>
                   <div class="col s8">
                     <span class="info-text"><%= cattery(cat).cattery_name %></span>
