--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="form">
     <div class="row">
-      <h2 class="form-title">Change your password</h2>
+      <h2 class="form-title"><%= t('form.change_password.change_password_button') %></h2>
     </div>
 
     <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
@@ -12,13 +12,13 @@
 
       <div class="row">
         <div class="input-field">
-          <%= f.label :password, "New password" %>
+          <%= f.label :password, t('form.change_password.new_password') %>
           <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
           <% if resource.errors[:password].any? %>
             <%= render "devise/shared/error_messages", resource: resource, field: :password %>
           <% else %>
             <% if @minimum_password_length %>
-              <span class="helper-text">(<%= @minimum_password_length %> characters minimum)</span>
+              <span class="helper-text">(<%= t('form.new_registration.minimum_character_message', minimum_char_count: @minimum_password_length) %></span>
             <% end %>
           <% end %>
         </div>
@@ -26,7 +26,7 @@
 
       <div class="row">
         <div class="input-field">
-          <%= f.label :password_confirmation, "Confirm new password" %>
+          <%= f.label :password_confirmation, t('form.change_password.new_password') %>
           <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
           <% if resource.errors[:password_confirmation].any? %>
             <%= render "devise/shared/error_messages", resource: resource, field: :password_confirmation %>
@@ -37,7 +37,7 @@
       <div class="row">
         <div class="actions">
           <%= f.button class:"btn waves-effect waves-light", type:"submit" do %>
-            Change my password
+            <%= t('form.change_password.change_password_button') %>
             <i class="material-icons right">send</i>
           <% end %>
         </div>
