--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="form">
     <div class="row">
-      <h2 class="form-title">Forgot your password?</h2>
+      <h2 class="form-title"><%= t('form.forgot_password.forgot_password_title') %></h2>
     </div>
 
     <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
@@ -22,7 +22,7 @@
       <div class="row">
         <div class="actions">
           <%= f.button class:"btn waves-effect waves-light", type:"submit" do %>
-            Send me reset password instructions
+            <%= t('form.forgot_password.forgot_password_button') %>
             <i class="material-icons right">send</i>
           <% end %>
         </div>
