--- a/app/views/pairs/_form.html.erb
+++ b/app/views/pairs/_form.html.erb
@@ -7,14 +7,14 @@
     <div class="row">
       <div class="col s12 m6">
         <div class="input-field">       
-          <%= f.select(:male_id, options_for_select(@male_cats_array, selected: f.object ? f.object.male_id : ""), {selected: "", disabled: "", prompt: 'Father *'}, {class:"icons"}) %>
+          <%= f.select(:male_id, options_for_select(@male_cats_array, selected: f.object ? f.object.male_id : ""), {selected: "", disabled: "", prompt: "#{t('cat_info.father')} *"}, {class:"icons"}) %>
         </div>
         <%= render 'shared/error_messages', object: @pair, field: :male_id %>
       </div>
 
       <div class="col s12 m6">
         <div class="input-field">
-          <%= f.select(:female_id, options_for_select(@female_cats_array, f.object ? f.object.female_id : ""), {selected: "", disabled: "", prompt: 'Mother *'}, {class:"icons"}) %>
+          <%= f.select(:female_id, options_for_select(@female_cats_array, f.object ? f.object.female_id : ""), {selected: "", disabled: "", prompt: "#{t('cat_info.mother')} *"}, {class:"icons"}) %>
         </div>
         <%= render 'shared/error_messages', object: @pair, field: :female_id %>
       </div>
@@ -26,9 +26,9 @@
       <div class="actions">
         <%= f.button class:"btn-large waves-effect waves-light", type:"submit", name:"form", value: @form do %>
           <% if @pair.new_record? %>
-            Create
+            <%= t('buttons.create') %>
           <% else %>
-            Update
+            <%= t('buttons.update') %>
           <% end %>
         <i class="material-icons right">done</i>
         <% end %>
@@ -39,40 +39,40 @@
 
   <div class="row">
     <div class="col">
-      <%= link_to overview_cattery_path(@user), class:"waves-effect waves-light btn left" do %>
+      <%= link_to 'javascript:history.back()', class:"waves-effect waves-light btn left" do %>
         <i class="material-icons left">keyboard_arrow_left</i>
-        Back
+        <%= t('buttons.back') %>
       <% end %>
     </div>
     <% if !@pair.new_record? %>
     <div class="col right">
       <% if pair_litters_count(@pair, @user) == 0 and pair_kittens_count(@pair, @user) == 0 %>
         <a class="btn waves-effect waves-light btn-delete modal-trigger" href="#modal-delete">
-          <span>Delete</span>
+          <span><%= t('buttons.delete') %></span>
           <i class="material-icons right">delete</i>
         </a>
         <div id="modal-delete" class="modal modal-confirmation">
           <div class="modal-content">
-            <h4>Delete <%= @form %></h4>
-            <p>Are you sure?</p>
-            <p>This action is permanent!</p>
+            <h4><%= t('buttons.delete') %>&nbsp;<%= (I18n.t "#{@form}", count:1).downcase %></h4>
+            <p><%= t('modal.are_you_sure') %>?</p>
+            <p><%= t('modal.this_action_is_permanent') %>!</p>
           </div>
           <div class="modal-footer">
             <a class="btn waves-effect waves-light modal-close btn-cancel">
-             Cancel
+             <%= t('words.cancel') %>
             </a>
             <%= link_to pair_path(@pair, form: @form), class:"btn waves-effect waves-light btn-confirm", method: :delete do %>
-              I'm sure
+              <%= t('words.im_sure') %>
             <% end %>
           </div>
         </div>
       <% else %>
-        <a class="btn disabled-tooltip-wrapper tooltipped" data-position="top" data-tooltip="You can't delete a pair with kittens">
+        <%= link_to "javascript:void(0)", class:"btn disabled-tooltip-wrapper tooltipped", data: { position:"top", tooltip: t('cattery_overview.tooltip.delete_parent_condition') } do %>
           <button class="btn waves-effect waves-light btn-delete disabled tooltipped">
-            <span>Delete</span>
+            <span><%= t('buttons.delete') %></span>
             <i class="material-icons right">delete</i>
           </button>
-        </a>
+        <% end %>
       <% end %>
     </div>
   <% end %>
