--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -5,7 +5,7 @@
         <button class="reset-dropdown circle">
           <i class="material-icons">restore</i>
         </button>
-        <%= f.select(:breeds, options_for_select(@all_available_breeds_array), {disabled: "", prompt: 'Which breed(s) are you looking for?'}, {:multiple => true, class:"form-filter"}) %>
+        <%= f.select(:breeds, options_for_select(@all_available_breeds_array), {disabled: "", prompt: t('select.which_breeds_are_you_looking_for')}, {:multiple => true, class:"form-filter"}) %>
       </div>
     </div>
     <div class="col s10 offset-s1 m4 offset-m2">
@@ -13,7 +13,7 @@
         <button class="reset-dropdown circle">
           <i class="material-icons">restore</i>
         </button>
-        <%= f.select(:locations, options_for_select(@all_available_locations_array), {disabled: "", prompt: 'Which location(s) do you prefer?'}, {:multiple => true, class:"form-filter"}) %>
+        <%= f.select(:locations, options_for_select(@all_available_locations_array), {disabled: "", prompt: t('select.which_locations_do_you_prefer')}, {:multiple => true, class:"form-filter"}) %>
       </div>
     </div>
   </div>
