--- a/app/views/users/my_cattery.html.erb
+++ b/app/views/users/my_cattery.html.erb
@@ -10,14 +10,14 @@
       </div>
 
       <div class="row">
-        <h4 class="form-section-title">General</h4>
+        <h4 class="form-section-title"><%= t('my_cattery.general') %></h4>
       </div>
 
       <div class="row">
         <div class="col s12 l8">
           <div class="input-field">
             <%= f.label :cattery_name do %>
-              Cattery name *
+              <%= t('my_cattery.cattery_name') %> *
             <% end %>
             <%= f.text_field :cattery_name, autofocus: true %>
           </div>
@@ -36,14 +36,14 @@
         <% if f.object.cattery_name.present? and f.object.postal_code.present? and f.object.city.present? and f.object.country_id.present? %>
           <div class="col">
             <%= link_to overview_cattery_path(@user), class:"waves-effect waves-light btn-large btn-link" do %>
-              Edit cats
+              <%= t('my_cattery.edit_cats') %>
               <i class="material-icons right">create</i>
             <% end %>
           </div>
           <% if @user.cats.any? %>
             <div class="col">
               <%= link_to cattery_path(@user), class:"waves-effect waves-light btn-large btn-link" do %>
-                View page
+                <%= t('my_cattery.view_page') %>
                 <i class="material-icons right">remove_red_eye</i>
               <% end %>
             </div>
@@ -51,7 +51,7 @@
         <% else %>
           <div class="col">
             <button class="btn-large disabled ">
-              Edit cats
+              <%= t('my_cattery.edit_cats') %>
               <i class="material-icons right">create</i>
             </button>
           </div>
@@ -62,7 +62,7 @@
       </div>
 
       <div class="row">
-        <h4 class="form-section-title">Profile picture</h4>
+        <h4 class="form-section-title"><%= t('my_cattery.profile_picture') %></h4>
       </div>
 
       <div class="row">
@@ -70,7 +70,7 @@
           <div class="file-field input-field">
             <div class="btn">
               <i class="material-icons-outlined">add_photo_alternate</i>
-              <span>Profile picture</span>
+              <span><%= t('my_cattery.profile_picture') %></span>
               <%= f.file_field :profile_picture %>
             </div>
             <div class="file-path-wrapper">
@@ -84,7 +84,7 @@
         <div class="col s12">
           <div class="card-picture-preview">
             <% if @user.profile_picture.blank? %>
-              <span>Preview *</span>
+              <span><%= t('words.preview') %> *</span>
             <% else %>
               <%= image_tag(@user.profile_picture) if @user.profile_picture.attached? %> 
             <% end %>
@@ -94,7 +94,7 @@
       </div>
 
       <div class="row">
-        <h4 class="form-section-title">Address</h4>
+        <h4 class="form-section-title"><%= t('my_cattery.address') %></h4>
       </div>
 
       <div class="row">
@@ -119,7 +119,7 @@
         <div class="col s5">
           <div class="input-field">
             <%= f.label :postal_code do %>
-              Postal code *
+              <%= t('my_cattery.postal_code') %> *
             <% end %>
             <%= f.text_field :postal_code %>
           </div>
@@ -129,7 +129,7 @@
         <div class="col s7">
           <div class="input-field">
             <%= f.label :city do %>
-              City *
+              <%= t('my_cattery.city') %> *
             <% end %>
             <%= f.text_field :city %>
           </div>
@@ -147,7 +147,7 @@
       </div>
 
       <div class="row">
-        <h4 class="form-section-title">Contact &amp; social media</h4>
+        <h4 class="form-section-title"><%= t('my_cattery.contact_and_social_media') %></h4>
       </div>
 
       <div class="row">
@@ -201,7 +201,7 @@
       <div class="row">
         <div class="actions">
           <%= f.button class:"btn waves-effect waves-light", type:"submit" do %>
-          Update
+          <%= t('buttons.update') %>
           <i class="material-icons right">send</i>
           <% end %>
         </div>
